# pixels

./: (Clone) 00-env-setup.ipynb  .REORG.md.swp  .gitignore  .pre-commit-config.yaml  00-README.py  00-dcm-index.py  00-env-setup.ipynb  00-init-schema.ipynb  00-load hls-pixels with dicoms.py  00-setup.py  01-dcm-demo.ipynb  01-dcm-demo.py  02-dcm-browser.py  03-Metadata-DeIdentification.py  03-governance-setup.sql  03b-Image-DeIdentification.ipynb  03b-Image-DeIdentification2.ipynb  04-UC-ABAC-Governance.py  04-UC-Governance.py  05-MONAILabel-Starter.py  05-MONAILabel.py  06-OHIF-Viewer.py  07-OHIF-Lakehouse-App.ipynb  07-OHIF-Lakehouse-App.py  07b-STOW-Processor-Job.ipynb  07b-STOW-Processor-Job.py  08-De-identification-With-Presidio.ipynb  08-GenieSpace.ipynb  09-SGC-Training.ipynb  09-SGC-Training.py  09-SGC-Training2.py  ABOUT.md  CLAUDE.md  CONTRIBUTING.md  DCM setup.py  Demo Objectframes.py  Demo Pixel Catalog.py  INSTALL.md  LICENSE  Makefile  (+31 more)
.databricks/: commit_outputs
ObjectFrames/: ObjectFrames.py  PythonShellImpl.py  __init__.py
ai-bi/: Pixels Object Catalog dashboard.lvdash.json  Pixels Object Catalog dashboard.lvdash.json.tmpl
config/: proxy_prep.py  setup.py  setup_ai.ipynb
dbx/: __init__.py  _version.py
docs/: DICOMWEB.md  INSTALL.md  NIFTI_OVERLAY.md
images/: README.md
install/: create-apps.ipynb  dcm-demo.ipynb  deploy-apps.ipynb  deploy-endpoint.py  deploy-gateway.ipynb  deploy-grants.ipynb  deploy-lakebase.ipynb  deploy-prep.ipynb  deploy-viewer.ipynb  genie-space.ipynb  init-schema.ipynb  post-install-update.py  register-model.py  (+4 more)
(+1000 files in other folders)
